# slinger

./: .gitmodules  CMakeLists.txt  README.md  build.sh
assets/background/: Background.psd
assets/tilemap/: slinger.tiled-session
include/: camera.h  enemy.h  globals.h  rope.h  ui.h  utils.h  world.h
src/: camera.cpp  enemy.cpp  globals.cpp  main.cpp  rope.cpp  ui.cpp  utils.cpp  world.cpp
